# WebServer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmark/: benchmark.md  long_conn.sh  run.sh  short_conn.sh  test_ar_scene.sh
benchmark/results/: report_20260629_170727.md
docs/superpowers/specs/: 2026-07-15-redis-session-cache-design.md
include/: EventLoop.h  EventLoopThreadPool.h  KICachePolicy.h  LFU.h  memoryPool.h
include/base/: Timestamp.h
include/cache/: RedisConnectionPool.h  SessionCache.h  TwoLevelCache.h
include/db/: DBWorkerPool.h  MySQLConnectionPool.h  SessionDAO.h
include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h  StaticFileCache.h
include/log/: AsyncLogging.h  FixedBuffer.h  LogStream.h  Logger.h
include/net/: Acceptor.h  Channel.h  EventLoop.h  EventLoopThread.h  EventLoopThreadPool.h  Poller.h  TcpConnection.h  TcpServer.h
include/timer/: TimerQueue.h
log/: CMakeLists.txt
memory/: CMakeLists.txt  memoryPool.cc
src/: Acceptor.cc  Buffer.cc  CMakeLists.txt  Channel.cc  CurrentThread.cc  DefaultPoller.cpp  EPollPoller.cc  EventLoop.cc  EventLoopThread.cc  EventLoopThreadPool.cc  InetAddress.cc  TcpConnection.cc  TcpServer.cc  TimerQueue.cc  Timestamp.cc  main.cc  main.cpp
src/base/: Thread.cpp
src/cache/: RedisConnectionPool.cpp  SessionCache.cpp  TwoLevelCache.cpp
src/db/: DBWorkerPool.cpp  MySQLConnectionPool.cpp  SessionDAO.cpp
src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
src/log/: AsyncLogging.cpp  LogStream.cpp  Logger.cpp
src/net/: Acceptor.cpp  Buffer.cpp  Channel.cpp  EPollPoller.cpp  EventLoop.cpp  EventLoopThread.cpp  Poller.cpp  Socket.cpp  TcpConnection.cpp  TcpServer.cpp
src/timer/: Timer.cpp  TimerQueue.cpp
tests/: session_cache_integration.sh  session_cache_test.cpp
www/: index.html
www/css/: style.css
www/js/: app.js
